# AstrBot

./: .codecov.yml  .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile_with_node  LICENSE  README.md  README_en.md  README_ja.md  app.py  compose.yml  cookies.json  launcher.py  main.py  pyproject.toml  requirements.txt  requirements_atri_base.txt  requirements_atri_ft.txt  stt.py  test.py  webapp_replit.py
.github/: PULL_REQUEST_TEMPLATE.md
addons/: baidu_aip_judge.py
astrbot/: __init__.py  bootstrap.py  core.py  main.py
changelogs/: v3.4.0.md  v3.4.1.md  v3.4.10.md  v3.4.11.md  v3.4.12.md  v3.4.13.md  v3.4.14.md  v3.4.15.md  v3.4.16.md  v3.4.17.md  v3.4.18.md  v3.4.19.md  v3.4.20.md  v3.4.21.md  v3.4.22.md  v3.4.23.md  v3.4.24.md  v3.4.25.md  v3.4.26.md  v3.4.27.md  v3.4.28.md  v3.4.29.md  v3.4.3.md  v3.4.30.md  v3.4.31.md  v3.4.32.md  v3.4.33.md  v3.4.35.md  v3.4.36.md  v3.4.37.md  v3.4.38.md  v3.4.39.md  v3.4.4.md  v3.4.5.md  v3.4.6.md  v3.4.7.md  v3.4.8.md  v3.4.9.md  v3.5.0.md
configs/: config.yaml
dashboard/: .gitignore  LICENSE  README.md  __init__.py  helper.py  index.html  package-lock.json  package.json  server.py  tsconfig.json  tsconfig.vite-config.json  vite.config.ts
persist/: session.py
tests/: test_dashboard.py  test_http_server.py  test_main.py  test_message.py  test_pipeline.py  test_plugin_manager.py
type/: astrbot_message.py  cached_queue.py  command.py  config.py  message.py  message_event.py  middleware.py  plugin.py  register.py  types.py
util/: cmd_config.py  io.py  (+9 more)
(+372 files in other folders)
